# fullstack-agent-guidelines

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  SKILL.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
.claude/agents/: dev-guidelines.md
.github/workflows/: cd.yml  ci.yml  pr-compliance-table.yml  publish-cli.yml
alembic/: env.py
api/: index.py
cli/: README.md  pyproject.toml
cli/src/validate_cli/: __main__.py  _models.py  _output.py  _state.py  app.py
cli/src/validate_cli/_validators/: commits.py  coverage.py  env.py  hardcoded_secrets.py  imports.py  logs.py  migration.py  project_layout.py  sensitive_logging.py  supply_chain.py  tests.py
examples/application/: 02_use_case.py
examples/backend/application/: 01_dto.py  03_use_case_write.py  04_test_pattern.py
examples/backend/domain/: 02_value_object.py
examples/backend/infrastructure/: 01_repository_interface.py  02_repository_impl.py
examples/backend/presentation/: 01_mcp_tool.py  02_fastapi_route.py
examples/domain/: 01_entity.py
examples/frontend/: 01_api_service.ts  02_server_component.tsx  03_react_query.tsx  04_form.tsx  05_middleware.ts  06_auth_context.tsx
examples/infrastructure/: 02_repository_impl.py
guidelines/: 01-project-structure.md  02-domain-layer.md  05-presentation-layer.md  06-solid-principles.md  09-testing.md  10-tech-debt.md  12-vibecoding-traps.md  13-owasp-top10.md  fe-01-project-structure.md  fe-02-server-vs-client.md  fe-05-authentication.md  fe-06-state-management.md
guidelines/agile/: 01-vertical-slices.md  02-definition-of-done.md  03-conventional-commits.md  04-pull-requests.md  05-dod-backend.md  06-dod-frontend.md  07-dod-security.md
guidelines/architecture/: 01-technology-selection.md
guidelines/backend/: 01-project-structure.md  02-domain-layer.md  03-application-layer.md  04-infrastructure-layer.md  05-presentation-layer.md  06-solid-principles.md  07-dry-kiss-yagni.md  08-security.md  09-testing.md  10-tech-debt.md  11-async-patterns.md  12-vibecoding-traps.md  13-owasp-top10.md  14-database-design.md  15-design-patterns.md  16-rework-clean.md  17-project-setup.md  18-observability-logging.md  19-audit-on-write.md  20-error-handling.md  21-api-pagination.md  22-idempotency.md  23-safe-migrations.md  24-configuration-layers.md  25-reference-data.md  26-rbac-permissions.md  27-feature-discipline.md  28-database-session.md  29-alembic-migrations.md
guidelines/frontend/: 01-project-structure.md  02-server-vs-client.md  03-data-fetching.md  04-forms-validation.md  05-authentication.md  06-state-management.md  07-owasp-top10.md  08-supply-chain.md  09-design-patterns.md  10-solid-dry-kiss.md  11-rework-clean.md  12-project-setup.md  13-e2e-playwright.md  14-loading-error-empty-states.md  15-accessibility.md  16-server-actions.md  17-component-testing.md  18-performance.md  19-rbac-permissions.md  20-feature-discipline.md
guidelines/infra/: 01-docker-compose.md  02-testing-in-docker.md  03-opentelemetry.md  04-makefile-as-gate.md
guidelines/qa/: 01-code-review.md  02-e2e-per-feature.md
scripts/: generate_compliance_table.py  validate_compliance_table.py
src/: mcp_main.py
src/application/dto/: __init__.py  analysis_dto.py  compliance_dto.py  example_dto.py  guideline_dto.py  metadata_dto.py  note_dto.py  structure_dto.py
src/application/use_cases/analysis/: validate_commits.py  validate_coverage.py  validate_env.py  validate_hardcoded_secrets.py  validate_imports.py  validate_logs.py  validate_migration.py  validate_sensitive_logging.py  validate_supply_chain.py  validate_tests.py
src/application/use_cases/compliance/: generate_table.py  get_workflow.py  validate_table.py  verify.py
src/application/use_cases/example/: get_by_name.py  list_all.py
src/application/use_cases/guideline/: get_all_context.py  get_by_slug.py  list_all.py  recommend.py  search.py
src/application/use_cases/metadata/: get_metadata.py
src/application/use_cases/note/: create.py  delete.py  get_by_id.py  list_all.py  update.py
src/application/use_cases/structure/: validate.py
src/auth/: oauth.py
src/config/: __init__.py  constants.py
src/config/settings/: __init__.py  base.py
src/domain/entities/: __init__.py  compliance.py  example.py  guideline.py  note.py
src/infrastructure/criteria/: __init__.py  agile.py  architecture.py  backend.py  frontend.py  infra.py  qa.py  security.py  structure.py
src/infrastructure/db/: base.py  engine.py
src/infrastructure/repositories/: contract.py  criteria_repository.py  example_repository.py  guideline_repository.py  note_repository.py
src/presentation/: view.py
src/presentation/resources/: guideline.py
src/presentation/tools/: analysis.py  compliance.py  example.py  guideline.py  health.py  metadata.py  note.py  structure.py
src/utils/: exc.py  logger.py  markdown.py
test/fixtures/examples/backend/application/: 01_test_fixture.py
test/fixtures/examples/backend/domain/: 01_test_fixture.py
test/fixtures/examples/frontend/: 01_test_fixture.ts
test/fixtures/guidelines/backend/: 01-test-alpha.md  02-test-beta.md
test/unit/application/use_cases/analysis/: test_validate_commits.py  test_validate_coverage.py  test_validate_env.py  test_validate_hardcoded_secrets.py  test_validate_imports.py  (+5 more)
test/unit/infrastructure/repositories/: test_criteria_repository.py  test_example_repository.py  test_guideline_repository.py
test/unit/utils/: test_markdown.py  test_skill_md.py
tests/: test_validate_cli_project_layout.py
(+14 files in other folders)
