[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "notes-mcp-server"
package-mode = false
version = "0.1.0"
description = "MCP Server built with clean architecture"
authors = ["Author <author@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mcp = { extras = ["cli"], version = "^1.9.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.32" }
pydantic = { extras = ["email"], version = "^2.11.1" }
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
snowflake-id = "^1.0.2"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.20.0"
taskipy = "^1.13.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
pytest-env = "^1.1.5"
ruff = "^0.11.5"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src --cov-report=html --cov-report=xml"

[tool.pytest_env]
ENVIRONMENT = "TEST"

[tool.coverage.report]
omit = [
    'src/mcp_main.py',
    'src/config/*',
    'src/utils/exc.py',
    'src/application/dto/*',
    'src/presentation/tools/*',
    'src/infrastructure/db/base.py',
    'src/infrastructure/db/engine.py',
]

exclude_also = [
    'def __repr__',
    'raise AssertionError',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]

[tool.ruff]
target-version = "py311"

[tool.taskipy.tasks]
autorevision = "alembic revision --autogenerate -m 'autogenerated'"
auhead = "alembic upgrade head"
adbase = "alembic downgrade base"
ruff = "ruff check ./src --fix"
ruff-check = "ruff check ./src"
ruff-format = "ruff format ./src"
pytest = "pytest ."
run = "python -m src.mcp_main"
run-sse = "MCP_TRANSPORT=sse python -m src.mcp_main"
