[project]
name = "validate-tools"
version = "0.1.0"
description = "CLI for the fullstack validation tools — runs locally, no MCP server needed"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
]

[project.scripts]
validate-tools = "validate_cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/validate_cli"]
