[project]
name = "validate-tools"
version = "0.2.0"
description = "Local CLI for fullstack code validation — import directions, migrations, secrets, and more"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
]
authors = [
    { name = "Silvio Cardoso" },
]
keywords = [
    "validation", "linting", "clean-architecture", "code-quality",
    "cli", "ai-agent", "security", "migrations",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/scardoso-lu/fullstack-agent-guidelines"
Repository = "https://github.com/scardoso-lu/fullstack-agent-guidelines"
"Bug Tracker" = "https://github.com/scardoso-lu/fullstack-agent-guidelines/issues"

[project.scripts]
validate-tools = "validate_cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/validate_cli"]

[tool.ruff]
target-version = "py311"
